--- a/changeRequest.html
+++ b/changeRequest.html
@@ -48,6 +48,10 @@
 	</div>
 </div></body><br>
 <h1 class=main> Change Category (check all that apply)</h1>
-<div class="chk"><input type="checkbox" name="Schd" value="Schedule">Schedule</div>
-<div class="chk"><input type="checkbox" name="cost" value="Cost">Cost</div>
+	<input type="checkbox" name="Schd" value="Schedule">Schedule</div>
+	<div class="chk"><input type="checkbox" name="cost" value="Cost">Cost</div>
+	<div class="chk"><input type="checkbox" name="scope" value="Scope">Scope</div>
+	<div class="chk"><input type="checkbox" name="reqdel" value="reqdel">Requirements/Deliverables</div>
+	<div class="chk"><input type="checkbox" name="testing" value="tstqual">Testing/Quality</div>
+	<div class="chk"><input type="checkbox" name="resources" value="resources">Resources</div>
 </body>		
