--- a/changeRequest.html
+++ b/changeRequest.html
@@ -33,8 +33,21 @@
 </style>
 </head>
 <body>
-	<h1 class=main> Change Request </h1><br>
-	<div class="row">
+	<h1> Change Request </h1><br>
+	<div class=projectInfo>
+		<table id="infoTable" width=100%>
+			<tr>
+				<td>Project:</td> <td width=40%><input width="60%" type="text" name="project"></td>
+				<td> Date:</td><td><input type="text" name="project"></td>
+			</tr>
+
+
+		</table>
+
+	</div>
+
+
+	<!-- <div class="row">
 		<div class="col">Project:</div>
 		<div class="col"><input type="text" name="project"></div>
 		<div class="col">Date:</div>
@@ -46,12 +59,12 @@
 		<div class="col">Change No:</div>
 		<div class="col"><input type="text" name="chnnum"></div>
 	</div>
-</div></body><br>
-<h1 class=main> Change Category (check all that apply)</h1>
+</div>
+<h1> Change Category (check all that apply)</h1>
 	<input type="checkbox" name="Schd" value="Schedule">Schedule</div>
 	<div class="chk"><input type="checkbox" name="cost" value="Cost">Cost</div>
 	<div class="chk"><input type="checkbox" name="scope" value="Scope">Scope</div>
 	<div class="chk"><input type="checkbox" name="reqdel" value="reqdel">Requirements/Deliverables</div>
 	<div class="chk"><input type="checkbox" name="testing" value="tstqual">Testing/Quality</div>
 	<div class="chk"><input type="checkbox" name="resources" value="resources">Resources</div>
-</body>		
+</body>		 -->
