--- a/changeRequest.html
+++ b/changeRequest.html
@@ -7,41 +7,30 @@
 			border:2px solid black ;
 			
 		}
-		.main{
-			border: 2px solid black;
-			text-align: center;
-			font-size: 20px
-			
+		.projectInfo{
+
+		}
+		table#infoTable {
+			border: 1px solid black;
 		}
 		.chk{
 			float:left;
 			clear:none;
 		}	
-		
-		.row {
-			float: none;
-			clear: both;
-			vertical-align: middle;
-		}
-		
-		.col {
-			height: 30px;
-			float: left;
-			
-		}
-		
 	</style>
 </head>
 <body>
-	<h1> Change Request </h1><br>
-	<div class=projectInfo>
+	<h3 style="text-align: center"> Change Request </h3><br>
+	<div class="projectInfo">
 		<table id="infoTable" width=100%>
 			<tr>
-				<td>Project:</td> <td width=40%><input width="60%" type="text" name="project"></td>
-				<td> Date:</td><td><input type="text" name="project"></td>
+				<td>Project:</td> <td width=40%><input size="50" type="text" name="project"></td>
+				<td> Date:</td><td><input type="date" name="date"></td>
 			</tr>
-			
-			
+			<tr>
+				<td>Change Requestor:</td> <td width=40%><input size="50" type="text" name="project"></td>
+				<td>Change Number:</td> <td width=40%><input size="50" type="text" name="project"></td>
+			</tr>
 		</table>
 		
 	</div>
