--- a/changeRequest.html
+++ b/changeRequest.html
@@ -7,20 +7,17 @@
 			border:2px solid black ;
 			
 		}
-		.projectInfo{
-
-		}
 		table#infoTable {
 			border: 1px solid black;
 		}
 		.chk{
 			float:left;
-			clear:none;
+			/* clear:none; */
 		}	
 	</style>
 </head>
 <body>
-	<h3 style="text-align: center"> Change Request </h3><br>
+	<h2 style="text-align: center"> Change Request </h2><br>
 	<div class="projectInfo">
 		<table id="infoTable" width=100%>
 			<tr>
@@ -32,28 +29,13 @@
 				<td>Change Number:</td> <td width=40%><input size="50" type="text" name="project"></td>
 			</tr>
 		</table>
-		
 	</div>
 	
-	
-	<!-- <div class="row">
-		<div class="col">Project:</div>
-		<div class="col"><input type="text" name="project"></div>
-		<div class="col">Date:</div>
-		<div class="col"><input type="date" name="date"></div>
-	</div>
-	<div class="row">
-		<div class="col">Change Requestor:</div>
-		<div class="col"><input type="text" name="chngreq"></div>
-		<div class="col">Change No:</div>
-		<div class="col"><input type="text" name="chnnum"></div>
-	</div>
-</div>
-<h1> Change Category (check all that apply)</h1>
-<input type="checkbox" name="Schd" value="Schedule">Schedule</div>
+<h3> Change Category (check all that apply)</h3>
+<div class="chk"><input type="checkbox" name="Schd" value="Schedule">Schedule</div>
 <div class="chk"><input type="checkbox" name="cost" value="Cost">Cost</div>
 <div class="chk"><input type="checkbox" name="scope" value="Scope">Scope</div>
 <div class="chk"><input type="checkbox" name="reqdel" value="reqdel">Requirements/Deliverables</div>
 <div class="chk"><input type="checkbox" name="testing" value="tstqual">Testing/Quality</div>
 <div class="chk"><input type="checkbox" name="resources" value="resources">Resources</div>
-</body>		 -->
+</body>
