--- a/changeRequest.html
+++ b/changeRequest.html
@@ -11,7 +11,7 @@
 			border: 1px solid black;
 		}
 		.chk{
-			float:left;
+			/* float:left; */
 			/* clear:none; */
 		}	
 	</style>
@@ -32,10 +32,10 @@
 	</div>
 	
 <h3> Change Category (check all that apply)</h3>
-<div class="chk"><input type="checkbox" name="Schd" value="Schedule">Schedule</div>
-<div class="chk"><input type="checkbox" name="cost" value="Cost">Cost</div>
-<div class="chk"><input type="checkbox" name="scope" value="Scope">Scope</div>
-<div class="chk"><input type="checkbox" name="reqdel" value="reqdel">Requirements/Deliverables</div>
-<div class="chk"><input type="checkbox" name="testing" value="tstqual">Testing/Quality</div>
-<div class="chk"><input type="checkbox" name="resources" value="resources">Resources</div>
+<div class="chk"> <input type="checkbox" name="Schd" value="Schedule">Schedule</div>
+<div class="chk"> <input type="checkbox" name="cost" value="Cost">Cost</div>
+<div class="chk"> <input type="checkbox" name="scope" value="Scope">Scope</div>
+<div class="chk"> <input type="checkbox" name="reqdel" value="reqdel">Requirements/Deliverables</div>
+<div class="chk"> <input type="checkbox" name="testing" value="tstqual">Testing/Quality</div>
+<div class="chk"> <input type="checkbox" name="resources" value="resources">Resources</div>
 </body>
