--- a/changeRequest.html
+++ b/changeRequest.html
@@ -4,43 +4,131 @@
 	<style>
 		body{
 			margin: 2% ;
-			/* border:2px solid black ; */
-			
+			border:2px solid black ;
 		}
 		table#infoTable {
-			border: 1px solid black;
+			padding:10px;
 		}
 		.chk{
 			float:left;
-			/* clear:none; */
+			padding: 20px;
 		}	
 		div.section{
+			padding:10px;
 			border: 1px solid black;
+		}
+		.clearfix:after {
+			content: "";
+			clear: both;
+			display: table;
+		}
+		.tbl {
+			text-align: center;
+			vertical-align: middle;
+			margin-left: 25px;
+			margin-top: 20px;
 		}
 	</style>
 </head>
 <body>
-	<h2 style="text-align: center"> Change Request </h2><br>
-	<div class="projectInfo">
-		<table id="infoTable" width=100%>
-			<tr>
-				<td>Project:</td> <td width=40%><input size="50" type="text" name="project"></td>
-				<td> Date:</td><td><input type="date" name="date"></td>
-			</tr>
-			<tr>
-				<td>Change Requestor:</td> <td width=40%><input size="50" type="text" name="project"></td>
-				<td>Change Number:</td> <td width=40%><input size="50" type="text" name="project"></td>
-			</tr>
-		</table>
-	</div>
+	<form>
+		<div class="section">
+			<h2 style="text-align: center"> Change Request </h2>
+			<table id="infoTable" width=100%>
+				<tr>
+					<td>Project:</td> <td width=40%><input size="50" type="text" name="project"></td>
+					<td> Date:</td><td><input type="date" name="date"></td>
+				</tr>
+				<tr>
+					<td>Change Requestor:</td> <td width=40%><input size="50" type="text" name="project"></td>
+					<td>Change Number:</td> <td width=40%><input size="50" type="text" name="project"></td>
+				</tr>
+			</table>
+		</div>
+		
+		<div class="section clearfix">
+			<h3> Change Category (check all that apply)</h3>
+			<div class="tbl">
+				<div class="chk"> <input type="checkbox" name="Schd" value="Schedule">Schedule</div>
+				<div class="chk"> <input type="checkbox" name="cost" value="Cost">Cost</div>
+				<div class="chk"> <input type="checkbox" name="scope" value="Scope">Scope</div>
+				<div class="chk"> <input type="checkbox" name="reqdel" value="reqdel">Requirements/Deliverables</div>
+				<div class="chk"> <input type="checkbox" name="testing" value="tstqual">Testing/Quality</div>
+				<div class="chk"> <input type="checkbox" name="resources" value="resources">Resources</div>
+			</div>
+		</div>
+		
+		<div class="section clearfix">
+			<h3> Does this change affect (check all that apply)</h3>
+			<div class="tbl">
+				<div class="chk"> <input type="checkbox" name="Schd" value="Schedule">Schedule</div>
+				<div class="chk"> <input type="checkbox" name="cost" value="Cost">Cost</div>
+				<div class="chk"> <input type="checkbox" name="scope" value="Scope">Scope</div>
+				<div class="chk"> <input type="checkbox" name="reqdel" value="reqdel">Requirements/Deliverables</div>
+				<div class="chk"> <input type="checkbox" name="testing" value="tstqual">Testing/Quality</div>
+				<div class="chk"> <input type="checkbox" name="resources" value="resources">Resources</div>
+			</div>
+		</div>
+		
+		<div class="section">
+			<h3>Describe the change being requested</h3>
+			<textarea name="description" rows="4" cols="150"></textarea>
+		</div>
+		
+		<div class="section">
+			<h3>Describe the change being requested</h3>
+			<textarea name="description" rows="4" cols="150"></textarea>
+		</div>
+		
+		<div class="section">
+			<h3>Describe the change being requested</h3>
+			<textarea name="description" rows="4" cols="150"></textarea>
+		</div>
+		
+		<div class="section">
+			<h3>Describe the change being requested</h3>
+			<textarea name="description" rows="4" cols="150"></textarea>
+		</div>
+		
+		<div class="section">
+			<h3>Describe the change being requested</h3>
+			<textarea name="description" rows="4" cols="150"></textarea>
+		</div>
+		
+		<div class="section">
+			<h3>Describe the change being requested</h3>
+			<textarea name="description" rows="4" cols="150"></textarea>
+		</div>
+		
+		<div class="section">
+			<h3>Describe the change being requested</h3>
+			<textarea name="description" rows="4" cols="150"></textarea>
+		</div>
+		
+		<div class="section clearfix">
+			<h3>Disposition</h3>
+			<div class="chk"> <input type="checkbox" name="reqdel" value="reqdel">Requirements/Deliverables</div>
+			<div class="chk"> <input type="checkbox" name="testing" value="tstqual">Testing/Quality</div>
+			<div class="chk"> <input type="checkbox" name="resources" value="resources">Resources</div>
+		</div>
+		<div class="section">
+			<h3>Describe the change being requested</h3>
+			<textarea name="description" rows="4" cols="150"></textarea>
+		</div>
+		
+		<h4> Change Board Approval</h2>
+			<div class="projectInfo">
+				<table id="infoTable" width=100%>
+					<tr>
+						<td>Project:</td> <td width=40%><input size="50" type="text" name="project"></td>
+						<td> Date:</td><td><input type="date" name="date"></td>
+					</tr>
+					<tr>
+						<td>Change Requestor:</td> <td width=40%><input size="50" type="text" name="project"></td>
+						<td>Change Number:</td> <td width=40%><input size="50" type="text" name="project"></td>
+					</tr>
+				</table>
+			</div>
+		</form>
+	</body>
 	
-	<h3> Change Category (check all that apply)</h3>
-	<div class="section">
-		<div class="chk"> <input type="checkbox" name="Schd" value="Schedule">Schedule</div>
-		<div class="chk"> <input type="checkbox" name="cost" value="Cost">Cost</div>
-		<div class="chk"> <input type="checkbox" name="scope" value="Scope">Scope</div>
-		<div class="chk"> <input type="checkbox" name="reqdel" value="reqdel">Requirements/Deliverables</div>
-		<div class="chk"> <input type="checkbox" name="testing" value="tstqual">Testing/Quality</div>
-		<div class="chk"> <input type="checkbox" name="resources" value="resources">Resources</div>
-	</div>
-</body>
