--- a/changeRequest.html
+++ b/changeRequest.html
@@ -116,19 +116,21 @@
 			<textarea name="description" rows="4" cols="150"></textarea>
 		</div>
 		
-		<h4> Change Board Approval</h2>
-			<div class="projectInfo">
-				<table id="infoTable" width=100%>
-					<tr>
-						<td>Project:</td> <td width=40%><input size="50" type="text" name="project"></td>
-						<td> Date:</td><td><input type="date" name="date"></td>
-					</tr>
-					<tr>
-						<td>Change Requestor:</td> <td width=40%><input size="50" type="text" name="project"></td>
-						<td>Change Number:</td> <td width=40%><input size="50" type="text" name="project"></td>
-					</tr>
-				</table>
-			</div>
-		</form>
-	</body>
-	
+		<div class="section">
+			<h4> Change Board Approval</h4>
+			<table id="signature" style="border:solid 1px black; text-align:left;" width=100%>
+				<thead>
+					<th>Name</th><th>Date</th>
+				</thead>
+				<tr>
+					<td><input type="text" name="name1" size="50"></td>
+					<td><input type="date" name="date1"></td>
+				</tr>
+				<tr>
+					<td><input type="text" name="name2" size="50"></td>
+					<td><input type="date" name="date2"></td>
+				</tr>
+			</table>
+		</div>
+	</form>
+</body>
