added submit and reset

--- a/changeRequest.html
+++ b/changeRequest.html
@@ -132,5 +132,10 @@
 				</tr>
 			</table>
 		</div>
+
+		<div class="section">
+			<input type="submit">
+			<input type="reset">
+		</div>
 	</form>
 </body>
