--- a/js_try.html
+++ b/js_try.html
@@ -4,26 +4,27 @@
 	<script>
 		
 		function ParamValidate(){
-			var x = document.getElementById('First_name').id
-    if (x == " ") {
-        alert("Name must be filled out");
-        return false;
-    }
-			
-
+			console.log("am in validate");
+			var x = document.getElementById('First_name').innerText;
+			console.log(x);
+			if (x == "") {
+				console.log("am in if")
+				alert("Name must be filled out");
+				return false;
+			}
 		}
-
+		
 	</script>
 </head>
 <body>
-	<form>
+	<form name="nameInput">
 		<label>FirstName</label>
-		<input id= First_name type="textbox" name="fName" value=" "/>
+		<input id="First_name" type="textbox" name="fName" value=" "/>
 		<label>LastName</label>
 		<input type="textbox" name="lName" value=" "/>
 		<input id="clickMe" type="button" value="Submit" onclick="ParamValidate();" />
 	</form>
-
+	
 </body>
 </html>
 
